sonar bugs fixed